# kime

./: .dockerignore  .envrc  .gitignore  .markdownlint.json  CHANGELOG.md  CMakeLists.txt  CONFIGURATION.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  NOTICE.md  README.ko.md  README.md  VERSION  default.nix  deny.toml  flake.nix  kime-xim.service  release.sh  shell.nix  typos.toml
.cargo/: config
daemon/: Cargo.toml
daemon/src/: main.rs
engine/: Cargo.toml  cbindgen.toml  generate_header.sh  kime-engine.h
engine-cffi/: Cargo.toml  build.rs
engine-cffi/src/: lib.rs
engine/capi/: Cargo.toml  build.rs  cbindgen.toml
engine/capi/data/: config.yaml
engine/capi/src/: lib.rs
engine/cffi/: Cargo.toml  build.rs  generate_bindings.sh  kime_engine.h
engine/cffi/src/: ffi.rs  lib.rs
engine/config-writer/: Cargo.toml
engine/core/: Cargo.toml
engine/core/data/: dubeolsik.yaml  sebeolsik-390.yaml
engine/core/src/: config.rs  input_result.rs  keycode.rs  lib.rs  state.rs
engine/core/tests/: dubeolsik.rs  sebeolsik_390.rs  sebeolsik_391.rs
engine/data/: config.yaml  dubeolsik.yaml  sebeolsik-391.yaml
engine/src/: characters.rs  config.rs  dubeolsik.rs  keycode.rs  lib.rs  state.rs  tests.rs
engine/src/tests/: dubeolsik.rs  sebeolsik_390.rs  sebeolsik_391.rs
engine/tests/: dubeolsik.rs  sebeolsik-390.rs  sebeolsik-391.rs
gtk2/: CMakeLists.txt
gtk2/src/: immodule.c
gtk3/: CMakeLists.txt  Cargo.toml  src
gtk3/src/: gtk.c  immodule.c  immodule.h  lib.rs
gtk4/: CMakeLists.txt
gtk4/src/: gtk4.c
qt5/: CMakeLists.txt
qt5/src/: input_context.cc  input_context.hpp  kime-qt5.hpp  kime.json  plugin.cc  plugin.hpp
src/: CMakeLists.txt  engine.rs  handler.rs  main.rs
src/daemon/: Cargo.toml
src/daemon/indicator/: Cargo.toml
src/daemon/indicator/src/: main.rs
src/daemon/kimed/: Cargo.toml
src/daemon/kimed/src/: main.rs
src/daemon/src/: main.rs
src/daemon/types/: Cargo.toml
src/daemon/types/src/: lib.rs
src/engine/: characters.rs  compose.rs  dubeolsik.rs  keycode.rs  state.rs
src/engine/backend/: Cargo.toml
src/engine/backend/src/: input_result.rs  keycode.rs  keymap.rs  lib.rs  state.rs
src/engine/backends/emoji/: Cargo.toml
src/engine/backends/emoji/src/: lib.rs
src/engine/backends/hangul/: Cargo.toml
src/engine/backends/hangul/data/: sebeolsik-3-90.yaml  sebeolsik-3-91.yaml  sebeolsik-3sin-p2.yaml
src/engine/backends/hangul/src/: characters.rs  layout.rs  lib.rs  state.rs
src/engine/backends/hangul/tests/: dubeolsik.rs  shared.rs
src/engine/backends/hanja/: Cargo.toml
src/engine/backends/hanja/src/: lib.rs
src/engine/backends/latin/: Cargo.toml
src/engine/backends/latin/data/: colemak.yaml  dvorak.yaml  qwerty.yaml
src/engine/backends/latin/src/: lib.rs
src/engine/backends/math/: Cargo.toml
src/engine/candidate/: Cargo.toml
src/engine/candidate/examples/: client.rs
src/engine/candidate/src/: client.rs  lib.rs  server.rs  shared.rs
src/engine/capi/: Cargo.toml  cbindgen-c.toml  cbindgen-cpp.toml  cbindgen.toml
src/engine/capi/src/: lib.rs
src/engine/cffi/: Cargo.toml  build.rs  kime_engine.h  kime_engine.hpp  update_bindings.sh  update_generate.sh
src/engine/cffi/benches/: call_key.rs
src/engine/cffi/src/: ffi.rs  lib.rs
src/engine/config/: Cargo.toml
src/engine/config/src/: lib.rs
src/engine/core/: Cargo.toml
src/engine/core/benches/: call_key.rs
src/engine/core/data/: colemak.yaml  dubeolsik.yaml  sebeolsik-3-91.yaml  sebeolsik-390.yaml  sebeolsik-391.yaml  sebeolsik-3sin-1995.yaml  sebeolsik-sin1995.yaml
src/engine/core/examples/: make_config.rs  print_default_config.rs  print_type_sizes.rs
src/engine/core/src/: characters.rs  config.rs  input_result.rs  keycode.rs  lib.rs  os.rs  state.rs
src/engine/core/tests/: config.rs  dubeolsik.rs  emoji.rs  font.rs  hanja.rs  latin.rs  math.rs  sebeolsik_390.rs  sebeolsik_391.rs  sebeolsik_3_90.rs  sebeolsik_3_91.rs  sebeolsik_3sin_1995.rs  sebeolsik_3sin_p2.rs  sebeolsik_sin1995.rs  shared.rs
src/engine/dict/: Cargo.toml  build.rs
src/engine/dict/data/: en.xml  ko.xml  symbol_map.json
src/engine/dict/src/: lib.rs  math_symbol_key.rs
src/engine/kime-engine/: Cargo.toml
src/engine/kime-engine/examples/: make_config.rs
src/engine/kime-engine/src/: config.rs  lib.rs  os.rs
src/frontends/gtk2/: CMakeLists.txt
src/frontends/gtk2/src/: gtk.c  immodule.c  immodule.h  str_buf.h
src/frontends/gtk3/: CMakeLists.txt
src/frontends/gtk3/src/: immodule.c  immodule.h  str_buf.c
src/frontends/gtk4/: CMakeLists.txt
src/frontends/gtk4/src/: gtk4.c
src/frontends/qt5/: CMakeLists.txt
src/frontends/qt5/src/: event_filter.cc  event_filter.hpp  input_context.cc  input_context.hpp  kime-qt5.hpp  plugin.cc  plugin.hpp
src/frontends/qt6/: CMakeLists.txt
src/frontends/wayland/: Cargo.toml  build.rs
src/frontends/wayland/src/: input_method_v1.rs  input_method_v2.rs  lib.rs  main.rs
src/frontends/xim/: Cargo.toml
src/frontends/xim/src/: handler.rs  main.rs  pe_window.rs
src/handler/: pe_window.rs
src/log/: Cargo.toml
src/log/src/: lib.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
src/tools/candidate-window/: Cargo.toml
src/tools/candidate-window/src/: main.rs
src/tools/check/: Cargo.toml
src/tools/check/src/: main.rs
src/tools/config/: Cargo.toml
src/tools/config/examples/: print_default_config.rs
src/tools/config/src/: lib.rs
src/tools/indicator/: Cargo.toml
src/tools/indicator/src/: main.rs
src/tools/kime/: Cargo.toml
src/tools/kime/src/: main.rs
src/tools/log/: Cargo.toml
src/tools/log/src/: lib.rs
src/tools/properties_writer/: Cargo.toml
src/tools/properties_writer/src/: main.rs
src/tools/run_dir/: Cargo.toml
src/tools/run_dir/src/: lib.rs
src/tools/version/: Cargo.toml
src/tools/version/src/: lib.rs
src/version/: Cargo.toml
src/version/src/: lib.rs
src/xtask/: Cargo.toml
src/xtask/src/: main.rs
wayland/: Cargo.toml
wayland/src/: main.rs
xim/: Cargo.toml
xim/src/: handler.rs  impls.rs  lib.rs  main.rs  pe_window.rs  reader.rs  types.rs  writer.rs
(+64 files in other folders)
