[package]
name = "kime-daemon"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
gio = "0.9.1"
gtk = "0.9.2"
libappindicator = "0.5.2"
libc = "0.2.82"
xdg = "2.2.0"
