[package]
name = "kime-engine"
version = "0.2.0-alpha1"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
ahash = { version = "0.6.2", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.15"
xdg = "2.2.0"
xkbcommon = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
