[package]
name = "kime-engine"
version = "0.4.1"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = { version = "0.6.2", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.15"
strum = "0.20.0"
strum_macros = "0.20.1"
xdg = "2.2.0"
