[package]
name = "kime-gtk3"
version = "0.2.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdk-sys = "0.10.0"
glib-sys = "0.10.1"
gobject-sys = "0.10.0"
gtk-sys = "0.10.0"
kime-engine = { path = "../engine" }
once_cell = "1.5.2"
pango-sys = "0.10.0"
