[package]
name = "kime-gtk3"
description = "Kime gtk3 immodule"
version = "0.8.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "kime_gtk3"
crate-type = ["cdylib"]

[dependencies]
gdk-sys = "0.10.0"
glib-sys = "0.10.1"
gobject-sys = "0.10.0"
gtk-sys = "0.10.0"
pango-sys = "0.10.0"

kime-engine-cffi = { path = "../engine/cffi" }

