[package]
name = "kime-wayland"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kime-engine-cffi = { path = "../engine/cffi" }

wayland-client = { version = "0.28.3", features = ["use_system_lib"] }
wayland-protocols = { version = "0.28.3", features = ["client", "unstable_protocols"] }
# zwp-input-method = "0.2.0"
zwp-input-method = { path = "../../zwp-input-method" }
zwp-virtual-keyboard = "0.2.0"
