[package]
name = "xim"
description = "Read and Write xim client data"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[dependencies]
enumflags2 = "0.6.4"
log = "0.4.11"
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.22"

[dev-dependencies]
pretty_assertions = "0.6.1"
