[package]
name = "kime-xim"
description = "Kime XIM server"
version = "0.7.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
ahash = "0.6.2"
cairo-rs = { version = "0.9.1", features = ["xcb"] }
log = "0.4.11"
x11rb = { version = "0.7.0", features = ["render"] }
simplelog = "0.9.0"
pico-args = "0.4.0"

xim = { git = "https://github.com/Riey/xim-rs", default-features = false, features = ["x11rb-server", "x11rb-xcb"] }
# xim = { path = "../../xim-rs", default-features = false, features = ["x11rb-server", "x11rb-xcb"] }

kime-engine-cffi = { path = "../engine/cffi" }
