[package]
name = "kime-engine-capi"
description = "Kime engine library"
version = "0.5.2"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "kime_engine"
crate-type = ["cdylib"]

[dependencies]
kime-engine-core = { path = "../core" }

[build-dependencies]
kime-engine-core = { path = "../core" }
serde_yaml = "0.8.15"

[package.metadata.deb]
name = "kime-engine"
maintainer = "Riey"
copyright = "2021, Riey <creeper844@gmail.com>"
depends = ""
provides = "kime-engine"
conflicts = "kime-engine"

assets = [
    ["target/release/libkime_engine.so", "usr/lib", "755"],
    ["data/config.yaml", "etc/kime", "644"],
]
