[package]
name = "kime-engine-capi"
description = "Kime engine library"
version = "0.7.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "kime_engine"
crate-type = ["cdylib"]

[dependencies]
kime-engine-core = { path = "../core" }

[build-dependencies]
kime-engine-core = { path = "../core" }
serde_yaml = "0.8.15"

