[package]
name = "kimed"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[dependencies]
kimed-types = { path = "../types" }

daemonize = "0.4.1"
glib = "0.10.3"
gobject-sys = "0.10.0"
gtk-sys = "0.10.0"
libappindicator-sys = "0.5.0"
xdg = "2.2.0"
log = "0.4.14"
anyhow = "1.0.38"
simplelog = "0.9.0"
