[package]
name = "kime-engine-backend"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
bitflags = "1.2.1"
enum-map = "1.0.0"
enumset = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0.118", features = ["derive"] }
strum = { version = "0.23", features = ["derive"] }
