[package]
name = "kime-engine-backend"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
bitflags = "1.2.1"
enum-map = "2"
enumset = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
