[package]
name = "kime-engine-cffi"
version = "0.8.1"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
cty = "0.2.1"

[build-dependencies]
kime-engine-capi = { path = "../capi" }
bindgen = { version = "0.58.1", default-features = false }
cbindgen = { version = "0.19.0", default-features = false }
