[package]
name = "kime-engine-cffi"
version = "0.8.1"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
kime-engine-capi = { path = "../capi" }
kime-engine-config = { path = "../config" }

[build-dependencies]
bindgen = { version = "0.63", default-features = false }
cbindgen = { version = "0.24", default-features = false }
