[package]
name = "kime-engine-config"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

[features]
config-serde = ["serde", "enumset/serde", "log/serde"]

[dependencies]
kime-engine-backend = { path = "../backend" }
kime-engine-backend-hangul = { path = "../backends/hangul" }
kime-engine-backend-latin = { path = "../backends/latin" }
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"], optional = true }
enumset = "1.0.6"
enum-map = "2"
maplit = "1.0.2"
