[package]
name = "kime-engine-core"
version = "2.0.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
kime-engine-config = { path = "../config", features = ["config-serde"] }
kime-engine-backend = { path = "../backend" }
kime-engine-backend-hangul = { path = "../backends/hangul" }
kime-engine-backend-hanja = { path = "../backends/hanja" }
kime-engine-backend-latin = { path = "../backends/latin" }
kime-engine-backend-math = { path = "../backends/math" }
kime-engine-backend-emoji = { path = "../backends/emoji" }
serde_yaml = "0.8.17"
parking_lot = "0.11.2"
fontdb = "0.7.0"
fontconfig-parser = "0.5.0"

[target.'cfg(unix)'.dependencies]
xdg = "2.2.0"
kime-run-dir = { path = "../../tools/run_dir" }

[dev-dependencies]
criterion = "0.3.4"
pretty_assertions = "1.0.0"

[[bench]]
name = "call_key"
harness = false

[features]
