[package]
name = "kime-engine-dict"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[build-dependencies]
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0"
itertools = "0.10.0"
quick-xml = { version = "0.27.1", features = ["encoding"] }
