[package]
name = "kime-wayland"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
kime-engine-cffi = { path = "../../engine/cffi" }
kime-version = { path = "../../tools/version" }

wayland-client = "0.29"
wayland-protocols = { version = "0.29", features = ["client", "unstable_protocols"] }
zwp-virtual-keyboard = "0.2.7"
xkbcommon = { version = "0.7.0", features = ["wayland"] }

libc = "0.2.82"
log = "0.4.13"
pico-args = "0.5.0"
mio = { version = "0.7", features = ["os-ext"] }
mio-timerfd = "0.2"
