[package]
name = "kime-xim"
description = "Kime XIM server"
version = "0.3.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
kime-engine-cffi = { path = "../../engine/cffi" }
kime-version = { path = "../../tools/version" }

xim = { version = "0.2", default-features = false, features = ["x11rb-server"] }
# xim = { path = "../../../../xim-rs", default-features = false, features = ["x11rb-server", "x11rb-xcb"] }

ahash = "0.8"
log = "0.4.11"
x11rb = { version = "0.11.0", features = ["render", "image"], default-features = false }
pico-args = "0.5.0"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9.2"
