[package]
name = "kime-candidate-window"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.16.2"
gdk = "0.16.2"
gtk-layer-shell = { version = "0.5.0", features = ["v0_6", "v0_4", "v0_5"] }
glib = "0.16.6"
