[package]
name = "kime-candidate-window"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kime-engine-cffi = { path = "../../engine/cffi" }
eframe = "0.20.1"
egui = "0.20.1"
