[package]
name = "kime-check"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
ansi_term = "0.12.1"
kime-engine-cffi = { path = "../../engine/cffi" }
kime-engine-core = { path = "../../engine/core" }
pad = "0.1.6"
serde_yaml = "0.9"
strum = { version = "0.24", features = ["derive"] }
xdg = "2.2.0"
